<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".UserInitActivity" >

    <TextView
        android:id="@+id/explain1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/syncingExplanation1" />
    <TextView
        android:id="@+id/explain2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/syncingExplanation2"/>
    <TextView
        android:id="@+id/explain3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/syncingExplanation3"/>

    <TextView
        android:id="@+id/explain4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/syncingExplanation4" />

    <EditText
        android:id="@+id/userNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/userNameEditHint"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/patternExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patternExplanation" />

    <Button
        android:id="@+id/patternButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/patternButtonText" />

    <TextView
        android:id="@+id/mainAddressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainAddressExplanation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/typeBTCButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/typeBTCButtonText" />

        <Button
            android:id="@+id/qrBTCButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/qrBTCButtonText" />

    </LinearLayout>
    
    <TextView
        android:id="@+id/patternText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patternTextPrefix" />
    
    <TextView
        android:id="@+id/addressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addressTextPrefix" />
    
    <Button
        android:id="@+id/finishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finishButtonText"/>

</LinearLayout>
